syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.ejercicio_1";
option java_outer_classname = "UserServiceProto";

service UserService {
    rpc GetUser (GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
    string user_id = 1;
}

message UserResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
}